Enable Inter font features

--- a/packages/desktop-client/index.html
+++ b/packages/desktop-client/index.html
@@ -82,6 +82,8 @@
           'Helvetica',
           'Arial',
           sans-serif;
+        /* Use disambiguation for better legibility in body text */
+        font-feature-settings: 'ss04';
       }
 
       html,
