--- a/packages/desktop-client/index.html
+++ b/packages/desktop-client/index.html
@@ -32,7 +32,7 @@
       button,
       input {
         font-family:
-          'Inter var',
+          'InterVariable',
           -apple-system,
           BlinkMacSystemFont,
           'Segoe UI',
@@ -68,7 +68,7 @@
       textarea {
         font-size: 1em;
         font-family:
-          'Inter var',
+          'InterVariable',
           -apple-system,
           BlinkMacSystemFont,
           'Segoe UI',
