Enable Inter font features
Add ss04 to styles.tnum

Remove font feature settings and always apply in tnum style

Always enable alternate digits (ss01) and slashed zero (zero) font features
instead of making them user-configurable preferences.

--- a/packages/desktop-client/index.html
+++ b/packages/desktop-client/index.html
@@ -82,6 +82,7 @@
           'Helvetica',
           'Arial',
           sans-serif;
+        font-feature-settings: 'ss01', 'ss04';
       }
 
       html,
