Update meta tags for Actual Budget Design System

--- a/packages/component-library/.storybook/manager-head.html
+++ b/packages/component-library/.storybook/manager-head.html
@@ -9,7 +9,7 @@
 <link href="/global-styles.css" rel="stylesheet" />
 
 <!-- Primary meta tags -->
-<meta name="title" content="Fluent UI React" />
+<meta name="title" content="Actual Budget Design System" />
 <meta
   name="description"
   content="Actual Budget is a super fast and privacy-focused app for managing your finances. At its heart is the well proven and much loved Envelope Budgeting methodology."
@@ -25,7 +25,7 @@
 />
 <meta property="og:locale" content="en" />
 <meta property="og:image" content="https://design.actualbudget.org/og.webp" />
-<meta property="og:image:type" content="image/png" />
+<meta property="og:image:type" content="image/webp" />
 <meta property="og:image:alt" content="Actual Budget Design System" />
 
 <!-- Twitter -->
